name:                blogserver
version:             0.1.0.0
synopsis:            REST API server to serve YAML blog posts
description:         Please see README.md
homepage:            https://github.com/ashutoshrishi/blogserver
license:             BSD3
license-file:        LICENSE
author:              Rishi
maintainer:          ashutoshrishi92@gmail.com
copyright:           2016 Ashutosh Rishi Ranjan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable blogserver
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       aeson >=0.11.1.4 && <=1.0.0.0
                     , base >=4.6 && <5
                     , directory ==1.2.7.0
                     , filepath >= 1.4.0.0
                     , http-types >= 0.9
                     , monad-logger >= 0.3.19
                     , parsec ==3.1.11
                     , persistent ==2.5
                     , persistent-postgresql ==2.5
                     , persistent-sqlite
                     , persistent-template ==2.5.1.4
                     , scotty
                     , text >= 1.2.2.0
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , wai ==3.2.1
                     , wai-cors ==0.2.5
                     , wai-extra ==3.0.16.1
                     , warp ==3.2.6
                     , bytestring ==0.10.6.0

source-repository head
  type:     git
  location: https://github.com/ashutoshrishi/blogserver


  
